# ariadne-pydantic

./: .pre-commit-config.yaml  README.md  gql_schema_generator.py  pyproject.toml  setup.cfg  utils.py
example/: main.py
tests/: gql_schema_generator_test.py
