[tool.poetry]
name = "ariadne-pydantic"
version = "0.1.0"
description = "A code-first approach with Ariadne and Pydantic"
authors = ["Gary Li Guoliang <gary@liguoliang.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ariadne = "^0.14.1"
uvicorn = "^0.17.5"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
